[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
dynamic = ["version", "description"]
name = "jieba3"
readme = "README.md"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [{ name = "Shihong Yan", email = "yansh97@foxmail.com" }]
keywords = ["Chinese", "NLP", "Analysis", "Tokenizer"]
dependencies = ["pydantic"]

[project.optional-dependencies]
dev = ["isort", "black", "flit"]

[project.urls]
Home = "https://github.com/yansh97/jieba3"

[tool.flit.sdist]
exclude = ["**/.DS_Store"]

[tool.isort]
profile = 'black'
